try to fix non visible gravatar -> picture in bio

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -73,7 +73,7 @@
 }
 
 .amanox {
-    position: center;
+    position: center + 94.74665px;
     width: 50%;
     animation-duration: 3s;
     animation-name: amanox;
